# kyu

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README.org
app/: CMakeLists.txt  main.c
include/: glfw_utility.h  shader.h
include/kyu/: base.h  flycheck_kyu.h.in.gch  flycheck_kyu_version.h.in.gch  kyu.h  shader.h  utils.h  vector.h
include/kyu/core/: base.h  file.h  utils.h  version.h.in
include/kyu/graphics/: gl.h  mesh.h  shader.h
include/kyu/math/: matrix.h  vector.h
shaders/: base.glsl  base_fragment.glsl  base_vertex.glsl
src/: glfw_utility.c  kyu.c  shader.c
src/kyu/: base.c  glfw_utility.c  glfw_utility.h  kyu.c  shader.c  utils.c  vector.c
src/kyu/core/: base.c  file.c  utils.c
src/kyu/graphics/: gl.c  mesh.c  shader.c
src/kyu/math/: matrix.c  vector.c
src/kyu/utils/: glfw_utility.h
